src/App.css
body {
  font-family: "Inter", sans-serif;
  box-sizing: border-box;
  margin: 0;
}

nav {
  display: flex;
  padding: 1.1em 0.9em;
  justify-content: space-between;
}

#color-el {
  padding: 0 0.5px;
  width: 2.5rem;
  height: 2rem;
  background-color: #d1d5db;
  border: 0.3px solid #d1d5db;
}

.select-box {
  font-family: "Inter", sans-serif;
  max-width: 400px;
  font-size: 1rem;
  flex: 1;
  margin: 0 12px;
  border: 1px solid #d1d5db;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
  border-radius: 6px;
  color: #111827;
}

button {
  font-family: "Inter", sans-serif;
  border: 1px solid #d1d5db;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
  border-radius: 4px;
  color: #374151;
  font-weight: 500;
  font-size: 0.8rem;
  line-height: 16px;
  background-color: #fff;
}

.col-color-container {
  display: flex;
  width: 100%;
  justify-content: space-between;
  height: 400px;
}

.col-color {
  background-color: gray;
  width: 100%;
  text-align: center;
  padding-top: 420px;
  line-height: 3rem;
  cursor: pointer;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: visible;
  padding: 1em;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  font-size: 1em;
  position: absolute;
  z-index: 1;
  bottom: 0%;
  left: 30%;
  margin-left: 0;
  opacity: 0;
  cursor: pointer;
  transition: opacity 0.3s;
  animation: shake 0.5s;
  animation-iteration-count: infinite;
}

.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 0.3;
}

@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }
  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }
  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }
  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }
  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }
  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }
  60% {
    transform: translate(-3px, 1px) rotate(0deg);
  }
  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }
  80% {
    transform: translate(-1px, -1px) rotate(1deg);
  }
  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }
  100% {
    transform: translate(1px, -2px) rotate(-1deg);
  }
}

